--- a/account/m_account_bind_zhifubao.html
+++ b/account/m_account_bind_zhifubao.html
@@ -70,7 +70,7 @@
 						token:UserInfo.token()
 					},
 					success:function(ret){
-						mui.alert(ret.res_msg,callback=function(){
+						mui.alert(ret.msg,callback=function(){
 							mui.back();
 						});
 					},
