--- a/account/m_account_coupon.html
+++ b/account/m_account_coupon.html
@@ -292,7 +292,7 @@
 					token:UserInfo.token()
 				},
 				success:function(ret){
-					mui.alert(ret.res_msg);
+					mui.alert(ret.msg);
 				},
 				error:function(xhr,type,errorThrown){
 					alert(type);
