--- a/account/m_account_withdraw.html
+++ b/account/m_account_withdraw.html
@@ -109,7 +109,7 @@
         						token:UserInfo.token()
         					},
         					success:function(ret){
-        						mui.alert(ret.res_msg);
+        						mui.alert(ret.msg);
         					},
         					error:function(xhr,type,errorThrown){
 								mui.alert(type);
