--- a/m_account_index.html
+++ b/m_account_index.html
@@ -88,7 +88,7 @@
 			            </a>
 			        </li>
               <li class="mui-table-view-cell">
-                  <a class="icon-yaoqing mui-navigate-right"  href="m_account_settings.html">
+                  <a class="icon-yaoqing mui-navigate-right"  href="account/m_account_invite.html">
                         邀请好友
                   </a>
               </li>
@@ -143,7 +143,7 @@
 				      aniShow: 'slide-in-right'
 				    },
 		            waiting: {
-						autoShow: false
+						autoShow: true,
 					},
 		            extras:{
 		            	user:user
@@ -165,7 +165,7 @@
 				      aniShow: 'slide-in-right'
 				    },
 		            waiting: {
-						autoShow: false
+						autoShow: true,
 					},
 		            extras:{
 		            	user:user
