--- a/registration/m_register.html
+++ b/registration/m_register.html
@@ -95,7 +95,7 @@
 							window.location.href = index_url;
 						}
 						else {
-							mui.alert(data.res_msg);
+							mui.alert(data.msg);
 						}
 					},
 					error:function(xhr,type,errorThrown){
