--- a/account/m_account_change_password.html
+++ b/account/m_account_change_password.html
@@ -62,7 +62,7 @@
 							token:UserInfo.token()
 						},
 						success:function(ret){
-							mui.alert(ret.res_msg,callback=function(){
+							mui.alert(ret.msg,callback=function(){
 								if (ret.code==0){
 									mui.back();
 								}
