--- a/account/m_password_reset.html
+++ b/account/m_password_reset.html
@@ -85,7 +85,7 @@
 					type:'POST',
 					timeout : 3000,
 					success : function(ret) {
-						mui.alert(ret.res_msg,callback=function(){
+						mui.alert(ret.msg,callback=function(){
 							if (ret.code==0){
 								window.history.back();
 							}
