--- a/account/m_register.html
+++ b/account/m_register.html
@@ -99,7 +99,7 @@
 							window.location.href = index_url;
 						}
 						else {
-							mui.alert(data.res_msg);
+							mui.alert(data.msg);
 						}
 					},
 					error:function(xhr,type,errorThrown){
