--- a/template.html
+++ b/template.html
@@ -61,6 +61,36 @@
 					opacity: 0;
 				}
 			}
+			@font-face {font-family: "wafuli-iconfont";
+				src: url('fonts/wafuli-iconfont.eot'); /* IE9*/
+				src: url('fonts/wafuli-iconfont.eot') format('embedded-opentype'), /* IE6-IE8 */
+				url('fonts/wafuli-iconfont.woff') format('woff'), /* chrome, firefox */
+				url('fonts/wafuli-iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+				url('fonts/wafuli-iconfont.svg') format('svg'); /* iOS 4.1- */
+			}
+			.iconfont {
+			    font-family:"wafuli-iconfont" !important;
+			    font-style:normal;
+			    -webkit-font-smoothing: antialiased;
+			    -webkit-text-stroke-width: 0.2px;
+			    -moz-osx-font-smoothing: grayscale;
+			}
+			.icon-fenxiang:before {
+				font-size: 16px;
+				content: "\e605";
+				color: #333;
+			}
+			header .share {
+				cursor: pointer;
+				position: absolute;
+				right: 0px;
+				top: 0px;
+				width: 44px;
+				height: 44px;
+				padding: 10px;
+				padding-top: 14px;
+				text-align: center;
+			}
 		</style>
 	</head>
 
@@ -68,10 +98,12 @@
 		<header class="mui-bar mui-bar-nav">
 			<a id="back" class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title"></h1>
+			<a id="share" class="share iconfont icon-fenxiang"></a>
 		</header>
 		<div class="mui-loader">加载中...</div>
 	</body>
 	<script src="js/mui.min.js"></script>
+	<script src="js/share.js"></script>
 	<script type="text/javascript">
 		//启用双击监听
 		mui.init({
@@ -80,8 +112,10 @@
 			}
 		});
 		var contentWebview = null,self = null;
+		var share_msg = {};
 		mui.plusReady(function () {
 			self = plus.webview.currentWebview();
+			contentWebview = self.children()[0];
 		});
 		mui.back = function() {
 			self.hide('auto');
@@ -109,6 +143,15 @@
 				contentWebview = plus.webview.currentWebview().children()[0];
 			}
 			contentWebview.evalJS('mui.scrollTo(0, 100)');
+		});
+		document.getElementById("share").addEventListener('tap',function () {
+//			share_msg = {};
+			share_msg.title = titleElem.innerHTML;
+			share_msg.content = "想想这里填什么  @礼沂";
+			console.log(JSON.stringify(share_msg));
+			window.share.open(share_msg,function(ret){
+				console.log(ret);
+			});
 		});
 		
 	</script>
