--- a/m_account_index.html
+++ b/m_account_index.html
@@ -83,7 +83,7 @@
 			</ul>
 			<ul class="mui-table-view">
 			        <li class="mui-table-view-cell">
-			            <a class="icon-fuligonglve mui-navigate-right"  href="account/m_account_settings.html">
+			            <a class="icon-fuligonglve mui-navigate-right"  href="account/m_strategy.html">
 			                 	挖福利攻略
 			            </a>
 			        </li>
