--- a/account/m_account_charge.html
+++ b/account/m_account_charge.html
@@ -37,7 +37,7 @@
 			<!--帐号部分-->
 			<div class="content-box">
 				<div class="msg clearfix">
-					<img id="userimg" src="images/user-01.png" alt="用户头像" />
+					<img id="userimg" src="images/user.png" alt="用户头像" />
 					<div class="text">
 						<p><number id="mobile"></number><br />
 						<span>账户余额：<strong>&nbsp;<number id="balance"></number>&nbsp;</strong>元</p>
