--- a/m_account_index.html
+++ b/m_account_index.html
@@ -28,7 +28,7 @@
 	<body>
 		<div class="mui-content">
 			<div class="top">
-        	<img id="userimg" src="images/user-01.png" alt="用户头像" />
+        	<img id="userimg" src="images/user.png" alt="用户头像" />
 				<a id="settings"><number id="mobile"></number><i class="icon iconfont">&#xe63d;</i></a>
 			</div>
 
