--- a/account/m_signin.html
+++ b/account/m_signin.html
@@ -33,19 +33,19 @@
 		<footer>
 			<ul class="clearfix tc">
 		    	<li>
-		        	<a href="{% url 'activity_lottery' %}">
+		        	<a >
 		            <i class="icon iconfont">&#xe619;</i>
 		        	<span>积分抽奖</span>
 		            </a>
 		        </li>
 		    	<li>
-		        	<a href="{% url 'account_exchange' %}">
+		        	<a >
 		            <i class="icon iconfont">&#xe629;</i>
 		        	<span>积分兑换</span>
 		            </a>
 		        </li>
 		    	<li>
-		        	<a href="{% url 'exchange_morescore' %}">
+		        	<a >
 		            <i class="icon iconfont ic-03">&#xe618;</i>
 		        	<span>更多积分</span>
 		            </a>
@@ -54,51 +54,49 @@
 		    </ul>
 		</footer>
 		<div class="mui-content">
-			<!--帐号部分-->
-
-				<div class="msg clearfix">
-					<img src="/static/images/user-0{{user.id| modulo:'4'}}.png" alt="用户头像" />
-					<div class="text">
-						<p>当前可用积分：<number>{{user.scores}}</number><br />
-						<span>今日已奖励5个积分，连续签七日可获得额外积分</p>
-					</div>
+			<div class="msg clearfix">
+				<img id="userimg" src="../images/user.png" alt="用户头像" />
+				<div class="text">
+					<p>当前可用积分：<number id="scores"></number><br />
+					<span>今日已奖励5个积分，连续签七日可获得额外积分</span></p>
 				</div>
-				<div class="table">
-					<h6><number>
-							<script>
-							Date.prototype.format = function (fmt) {
-							    var o = {
-							        "M+": this.getMonth() + 1, //月份
-							        "d+": this.getDate(), //日
-							        "h+": this.getHours(), //小时
-							        "m+": this.getMinutes(), //分
-							        "s+": this.getSeconds(), //秒
-							        "q+": Math.floor((this.getMonth() + 3) / 3), //季度
-							        "S": this.getMilliseconds() //毫秒
-							    };
-							    if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
-							    for (var k in o)
-							    if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
-							    return fmt;
-							}
-							document.write(new Date().format("yyyy-MM-dd"));
-							</script>
-						</number>
-					</h6>
-					<table id="calendar" border="" cellspacing="" cellpadding="">
+			</div>
+			<div class="table">
+				<h6><number>
+						<script>
+						Date.prototype.format = function (fmt) {
+						    var o = {
+						        "M+": this.getMonth() + 1, //月份
+						        "d+": this.getDate(), //日
+						        "h+": this.getHours(), //小时
+						        "m+": this.getMinutes(), //分
+						        "s+": this.getSeconds(), //秒
+						        "q+": Math.floor((this.getMonth() + 3) / 3), //季度
+						        "S": this.getMilliseconds() //毫秒
+						    };
+						    if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+						    for (var k in o)
+						    if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+						    return fmt;
+						}
+						document.write(new Date().format("yyyy-MM-dd"));
+						</script>
+					</number>
+				</h6>
+				<table id="calendar" border="" cellspacing="" cellpadding="">
 
-						<tr>
-							<th>日</th>
-							<th>一</th>
-							<th>二</th>
-							<th>三</th>
-							<th>四</th>
-							<th>五</th>
-							<th>六</th>
-						</tr>
-						<script src="../js/calendar.js"></script>
-					</table>
-				</div>
+					<tr>
+						<th>日</th>
+						<th>一</th>
+						<th>二</th>
+						<th>三</th>
+						<th>四</th>
+						<th>五</th>
+						<th>六</th>
+					</tr>
+					<script src="../js/calendar.js"></script>
+				</table>
+			</div>
 		</div>	<!--mui-content-->
 		<div id="login" class="delete" style="display: none;">
 			<div>
@@ -112,26 +110,29 @@
 	<script src="../js/UserInfo.js"></script>
 	<script>
 		mui.init();
-		mui.plusReady()
-		if(UserInfo.has_login()){
-			signin();
-		}
-		else{
-			mui.openWindow({
-	            url: "../a_login.html",
-	            id:"login",
-	            styles: {
-	                top: 0,
-	                bottom: 0
-	            },
-	            show: {
-	                aniShow: 'slide-in-right',
-	            },
-	            extras:{
-	            	backid:"m_signin.html"
-	            }
-	        });
-		}
+		mui.plusReady(function(){
+			if(UserInfo.has_login()){
+				signin();
+			}
+			else{
+				console.log("whatlksjfdko");
+				mui.openWindow({
+		            url: "../a_login.html",
+		            id:"login",
+		            styles: {
+		                top: 0,
+		                bottom: 0
+		            },
+		            show: {
+		                aniShow: 'slide-in-right',
+		            },
+		            extras:{
+		            	backid:"account/m_signin.html"
+		            }
+		        });
+			}
+		});
+		
 		var close = document.getElementById("close"),
 			login = document.getElementById("login");
   		window.addEventListener('login-refresh',function(){
@@ -143,6 +144,9 @@
   				if(data.code==0){
   					login.style.display="block";
   				}
+  				var img = "images/user-0" + ret.userimg + ".png";
+				document.getElementById('userimg').src = img;
+				document.getElementById('scores').innerText = ret.scores;
 				var arr = document.getElementById("calendar").getElementsByTagName("number");
 				for (var ele in arr){
 					var i = arr[ele].innerHTML;
