--- a/template.html
+++ b/template.html
@@ -135,7 +135,7 @@
 			var title = e.detail.title;
 			titleElem.innerHTML = title;
 			titleElem.className = "mui-title mui-fadein";
-			self.show('pop-in');
+			self.show();
 		});
 		
 		document.querySelector('header').addEventListener('doubletap',function () {
