--- a/m_detail_welfare.html
+++ b/m_detail_welfare.html
@@ -163,9 +163,9 @@
 			            show: {
 			                aniShow: 'slide-in-right',
 			            },
-			            extras:{
-			            	backid:self.id
-			            }
+//			            extras:{
+//			            	backid:self.id
+//			            }
 			        });
 			        return;
 				}
